UI improvements and fixes - When hovering over keypoint circle, keypoint name appears until   no longer highlighted (when mouse moves off) - When hovering over occluded button, keypoint circle radius   doubled (TODO: should also be highlighted) - Minor increase in amount of time Menu stays open - Annotation tool page fits slightly better in window (TODO: worker   label slightly truncated by top of window, might need to further   zoom out or decrease the window size)

--- a/cvat/apps/engine/static/engine/base.css
+++ b/cvat/apps/engine/static/engine/base.css
@@ -1,10 +1,16 @@
 html {
     background-color: #FFFFFF;
     margin: 0px auto;
+    height : 100%;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+body{
+    margin: 0px auto;
+    height : 100%;
 }
 
 @font-face {
